--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,28 +1,98 @@
-# This file configures the analyzer, which statically analyzes Dart code to
-# check for errors, warnings, and lints.
-#
-# The issues identified by the analyzer are surfaced in the UI of Dart-enabled
-# IDEs (https://dart.dev/tools#ides-and-editors). The analyzer can also be
-# invoked from the command line by running `flutter analyze`.
-
-# The following line activates a set of recommended lints for Flutter apps,
-# packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    todo: ignore
 
 linter:
-  # The lint rules applied to this project can be customized in the
-  # section below to disable rules from the `package:flutter_lints/flutter.yaml`
-  # included above or to enable additional rules. A list of all available lints
-  # and their documentation is published at https://dart.dev/lints.
-  #
-  # Instead of disabling a lint rule for the entire project in the
-  # section below, it can also be suppressed for a single line of code
-  # or a specific dart file by using the `// ignore: name_of_lint` and
-  # `// ignore_for_file: name_of_lint` syntax on the line or in the file
-  # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
-
-# Additional information about this file can be found at
-# https://dart.dev/guides/language/analysis-options
+    sort_constructors_first: true
+    avoid_empty_else: true
+    prefer_int_literals: true
+    prefer_single_quotes: true
+    sort_child_properties_last: true
+    sized_box_for_whitespace: true
+    require_trailing_commas: true
+    sort_unnamed_constructors_first: true
+    depend_on_referenced_packages: false
+    prefer_relative_imports: true
+    prefer_const_constructors: true
+    missing_whitespace_between_adjacent_strings: true
+    always_declare_return_types: true
+    always_put_required_named_parameters_first: true
+    annotate_overrides: true
+    avoid_bool_literals_in_conditional_expressions: true
+    avoid_double_and_int_checks: true
+    avoid_escaping_inner_quotes: true
+    avoid_field_initializers_in_const_classes: true
+    avoid_final_parameters: true
+    avoid_function_literals_in_foreach_calls: true
+    avoid_init_to_null: true
+    avoid_multiple_declarations_per_line: true
+    avoid_null_checks_in_equality_operators: true
+    avoid_print: true
+    avoid_private_typedef_functions: true
+    avoid_redundant_argument_values: true
+    avoid_relative_lib_imports: true
+    avoid_renaming_method_parameters: true
+    avoid_return_types_on_setters: true
+    avoid_returning_null_for_void: true
+    avoid_returning_this: true
+    avoid_setters_without_getters: true
+    avoid_shadowing_type_parameters: true
+    avoid_single_cascade_in_expression_statements: true
+    avoid_slow_async_io: true
+    avoid_type_to_string: true
+    avoid_types_as_parameter_names: true
+    avoid_unnecessary_containers: true
+    avoid_unused_constructor_parameters: true
+    avoid_void_async: true
+    await_only_futures: true
+    empty_catches: true
+    empty_constructor_bodies: true
+    empty_statements: true
+    eol_at_end_of_file: true
+    exhaustive_cases: true
+    file_names: true
+    flutter_style_todos: true
+    implementation_imports: true
+    implicit_reopen: true
+    invalid_case_patterns: true
+    #lines_longer_than_80_chars: true
+    literal_only_boolean_expressions: true
+    no_adjacent_strings_in_list: true
+    no_duplicate_case_values: true
+    no_leading_underscores_for_library_prefixes: true
+    no_leading_underscores_for_local_identifiers: true
+    no_logic_in_create_state: true
+    null_check_on_nullable_type_parameter: true
+    only_throw_errors: true
+    overridden_fields: true
+    prefer_const_constructors_in_immutables: true
+    prefer_if_null_operators: true
+    prefer_interpolation_to_compose_strings: true
+    void_checks: true
+    unnecessary_late: true
+    unnecessary_library_directive: true
+    unnecessary_new: true
+    null_closures: true
+    omit_local_variable_types: false
+    prefer_contains: true
+    prefer_final_fields: true
+    prefer_final_in_for_each: true
+    prefer_final_locals: true
+    prefer_is_not_empty: true
+    prefer_is_empty: true
+    unnecessary_breaks: false
+    unnecessary_const: true
+    # unawaited_futures: true
+    # unnecessary_await_in_return: true
+    # avoid_positional_boolean_parameters: true
+    # camel_case_extensions: true
+    # camel_case_types: true
+    # cancel_subscriptions: true
+    # cascade_invocations: true
+    # cast_nullable_to_non_nullable: true
+    # collection_methods_unrelated_type: true
+    # combinators_ordering: true
+    # comment_references: true
+    # conditional_uri_does_not_exist: true
+    # constant_identifier_names: true
