--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_modular: ^6.3.4
-  flutter_svg: ^2.0.10+1
+  flutter_svg: ^2.0.9
+  shared_preferences: ^2.2.3
+  flutter_secure_storage: ^9.2.2
+  dio: ^5.4.3+1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
-  #   - images/a_dot_ham.jpeg
+     - assets/images/onboarding/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
