--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  image_picker: ^1.1.2
   cupertino_icons: ^1.0.6
   flutter_modular: ^6.3.4
   flutter_svg: ^2.0.9
@@ -72,6 +73,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/
+     - assets/images/locate/
      - assets/images/onboarding/
      - assets/images/bottom_navigation_bar/
 
